# Intelitrader-experiencia

./: package.json
Intelitrader-API/: .gitignore  Intelitrader-API.csproj  Intelitrader-API.sln  Program.cs  Startup.cs  appsettings.json
Intelitrader-API/Attributes/: DateValidator.cs  NameValidator.cs  SexValidator.cs
Intelitrader-API/Controllers/: UsersController.cs
Intelitrader-API/Data/: AppDataContext.cs  AutoMapperConfig.cs  UsersContext.cs
Intelitrader-API/Dtos/: CreateUserDto.cs  GetUserDto.cs  UpdateUserDto.cs
Intelitrader-API/Interfaces/: IUserRepository.cs
Intelitrader-API/Migrations/: 20210917041924_InitialMigration.Designer.cs  20210917041924_InitialMigration.cs  20210920014138_UserParamRequiredUpdated.Designer.cs  20210920014138_UserParamRequiredUpdated.cs  AppDataContextModelSnapshot.cs
Intelitrader-API/Models/: UserModel.cs
Intelitrader-API/Repositories/: UserRepository.cs
Intelitrader-FIX/Acceptor/: CMakeLists.txt
Intelitrader-FIX/Acceptor/libs/quickfix/spec/: FIX44EntrypointGatewayEquities.xml
Intelitrader-FIX/Acceptor/src/: Acceptor.cpp  Acceptor.h  Application.cpp  Application.h  Order.cpp  Order.h  acceptor.cfg
Intelitrader-FIX/Initiator/: CMakeLists.txt
Intelitrader-FIX/Initiator/src/: Application.cpp  (+4 more)
Intelitrader-MOBILE/: .gitignore  Intelitrader_Mobile.sln
Intelitrader-WEB/: package-lock.json
Intelitrader-WEB/public/: index.html  manifest.json
Intelitrader-WEB/src/: App.tsx
src/: App.tsx  index.css
src/components/: dropdown.tsx  tableSearch.tsx
src/interfaces/: IPatchOp.tsx
src/services/: UserService.tsx
(+43 files in other folders)
